# miniond

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  prebuilt-image.md  static.nix
.github/workflows/: build.yml  nixos.yml
nixos/: emulab.nix  miniond.nix  recommended-no-flakes.nix
src/: account.rs  config.rs  emulab.pem  error.rs  geni.rs  hostname.rs  main.rs  mount.rs
src/applet/: autohost.rs  automount.rs  autouser.rs  mod.rs  signal.rs  tmcc.rs
src/tmcc/: discovery.rs  mod.rs  parser.rs
