[package]
name = "miniond"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1.51"
clap = { version = "3.1.0", features = [ "derive" ] }
env_logger = "0.9.0"
futures = "0.3.16"
hostname = { version = "0.3.1", features = [ "set" ] }
libsystemd = "0.5.0"
log = "0.4.14"
nix = "0.25.0"
regex = "1.5.4"
resolv-conf = "0.7.0"
serde = { version = "1.0.130", features = [ "derive" ] }
serde-xml-rs = "0.6.0"
snafu = "0.7.1"
toml = "0.5.8"
trust-dns-resolver = "0.22.0"
which = "4.2.2"
users = "0.11.0"

[dependencies.tokio]
version = "1.10.1"
features = [ "full" ]
